# token-security-scanner-rust-pro

./: README.md
rustllmagentcliFreeApp/: .env.example  .gitignore  API_KEYS_SETUP.md  Cargo.toml  README.md  TUI_COMMANDS_DOCUMENTATION.md
rustllmagentcliFreeApp/config/: default.toml
rustllmagentcliFreeApp/src/: http_client.rs  lib.rs  main.rs  retry.rs  warmup.rs
rustllmagentcliFreeApp/src/agent/: controller.rs  conversation.rs  llm_client.rs  mod.rs  tool_coordinator.rs
rustllmagentcliFreeApp/src/api/: alchemy_simulation.rs  amlbot.rs  blacklist_scanner.rs  blockscout.rs  dedaub.rs  defillama.rs  deployer.rs  dexscreener.rs  erc20_rpc.rs  etherscan.rs  ethplorer.rs  fallback_chain.rs  forta.rs  goplus.rs  honeypot.rs  honeypot_is.rs  lp_lock.rs  misttrack.rs  mod.rs  moralis.rs  rpc_simulation.rs  scam_sniffer.rs  scammer_detector.rs  scanner.rs  slither_analyzer.rs  source_checker.rs  tenderly.rs  thegraph.rs  tokensniffer.rs  tokensniffer_v2.rs  transfer_events.rs
rustllmagentcliFreeApp/src/app/: config.rs  event.rs  mod.rs  state.rs
rustllmagentcliFreeApp/src/llm/: manifest_analyzer.rs  mod.rs  phi3_client.rs
rustllmagentcliFreeApp/src/models/: mod.rs  token_data.rs
rustllmagentcliFreeApp/src/report/: directory_manager.rs  html_report.rs  json_report.rs  manifest.rs  mod.rs
rustllmagentcliFreeApp/src/scanner/: alerting.rs  feature_extract.rs  ml_score.rs  mod.rs  pipeline.rs  source_analyzer.rs  tri_engine.rs
rustllmagentcliFreeApp/src/tools/: executor.rs  mod.rs  registry.rs  result.rs
rustllmagentcliFreeApp/src/tools/code/: analyze.rs  mod.rs  parse.rs
rustllmagentcliFreeApp/src/tools/directory/: create.rs  delete.rs  list.rs  mod.rs
rustllmagentcliFreeApp/src/tools/file/: info.rs  mod.rs  read.rs  write.rs
rustllmagentcliFreeApp/src/tools/git/: diff.rs  log.rs  mod.rs  status.rs
rustllmagentcliFreeApp/src/tools/scanner/: mod.rs  token_scanner.rs
rustllmagentcliFreeApp/src/tools/search/: content_search.rs  file_search.rs  mod.rs
rustllmagentcliFreeApp/src/tools/system/: command.rs  mod.rs
rustllmagentcliFreeApp/src/tui/: app.rs  input_handler.rs  mod.rs  toast.rs  todo.rs  ui.rs
rustllmagentcliFreeApp/src/types/: error.rs  message.rs  mod.rs  tool.rs
rustllmagentcliFreeApp/src/utils/: csv_todo.rs  formatter.rs  logger.rs  mod.rs  model_detector.rs  network_scanner.rs
rustllmagentcliFreeApp/token-risk-llm/: Dockerfile  app.py  config.yaml  requirements.txt
(+33 files in other folders)
